usage cost of the last week